--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gloo-net = "0.5.0"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+wasm-bindgen-futures = "0.4.39"
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
