--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2021"
 gloo-net = "0.5.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+wasm-bindgen = "0.2.89"
 wasm-bindgen-futures = "0.4.39"
+web-sys = "0.3.66"
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
